--- a/borsa/about-us/risk-disclosure.html
+++ b/borsa/about-us/risk-disclosure.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Account Types - BorsaPro</title>
+  <title>Risk Disclosure - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -21,9 +21,9 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Accounts</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="trade-with-borsapro.html">Trade with BorsaPro</a></li>
-                      <li class="main-nav__item"><a>Account types</a></li>
-                      <li class="main-nav__item"><a href="segregated-account.html">Segregated account</a></li>
+                      <li class="main-nav__item"><a href="../accounts/trade-with-borsapro.html">Trade with BorsaPro</a></li>
+                      <li class="main-nav__item"><a href="../accounts/account-types.html">Account types</a></li>
+                      <li class="main-nav__item"><a href="../accounts/segregated-account.html">Segregated account</a></li>
                       <li class="main-nav__item"><a href="#">Open live account</a></li>
                   </ul>
                 </li>
@@ -60,110 +60,25 @@
       </div>
     </div>
   </header>
-  <section class="title  title--accounts">
+  <section class="title  title--platforms">
     <div class="container">
-      <h1>Account Types</h1>
+      <h1>Risk Disclosure</h1>
     </div>
   </section>
-  <section class="table">
+  <section class="assets">
     <div class="container">
-      <table>
-        <tr>
-          <th></th>
-          <th>
-            <b>Mini</b>
-            <p>Basic Exchange For<br>Beginners</p>
-            <b>$500</b>
-            <a class="button" href="">Open account</a>
-          </th>
-          <th>
-            <b>Classic</b>
-            <p>For Skilled<br>Investors</p>
-            <b>$5 000</b>
-            <a class="button" href="">Open account</a>
-          </th>
-          <th>
-            <b>Premium</b>
-            <p>Advanced Transaction<br>For Experienced Investors</p>
-            <b>$20 000</b>
-            <a class="button" href="">Open account</a>
-          </th>
-        </tr>
-        <tr>
-          <td>Online Chat Support</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Platforms: MT4 & Mobile</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Instruments: Forex, CFDs & Commodities</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Free E-book</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Individual Competitive Spreads & Commissions</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Access to Breaking News & Market Research</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Online Phone Support</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Real-Time Trading Signals</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Trading Education Program</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Account Executive Team Available 24/7</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Trade Mentor</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-        </tr>
-      </table>
-      <h1>BorsaPro gives you:</h1>
-        <p>Creating a trading profile at BorsaPro is very easy and perfectly safe.</p>
-      <b>1. Select an account type.</b>
-        <p>There are 3 accounts which you can choose from, and every single one features different pluses for the investor. You are free to choose whichever one suits your needs best. Remember that it`s possible to switch your account type after you make the first deposit.</p>
-      <b>2. Complete the required information and provide identity verification.</b>
-        <p>Just fill in the required information and provide something which proves your identity.</p>
-      <b>3. Put money on your account.</b>
-        <p>After we confirm your application, you will be able to put money on your account and begin investing immediately.</p>
+      <p>Don`t forget that trading company shares, investing in currency and any other financial instrument has its definite risks and can result in losses for the user. The following announcement lists some of the hazards related to investing in financial assets. We would like you to go through the disclaimer and let us know in case you have any questions or uncertainties about it.</p>
+      <p>Because of the theoretical essence of Forex trading, it is possible that the user ends up losing all, or at least some of his money. In some cases the amount of lost funds can be bigger than the first deposit. BorsaPro highly recommends that the client uses a so called risk capital for his investment purposes. Risk capital refers to money which is not important for covering the basic life needs of the client. In other words, it is money which you can afford to lose. It is also wise to make an assessment of what you want to achieve by trading Forex and how far you`re willing to go. Be aware of your own financial capabilities and try to find the approach to trading that works best for you.</p>
+      <p>In case you cannot fully comprehend the uncertainty behind Forex trading or any of the BorsaPro terms and conditions, we advise you to abstain from trading on BorsaPro. Along with all of the abovementioned factors, here are some additional risk related factors you should have in mind:</p>
+      <ol>
+        <li>BorsaPro might have an advantage with amounts that go over the amount of the user`s margin deposit and this might lead to losses bigger than the amount of the deposit.</li>
+        <li>Volatile market conditions and fluctuations, as well as building up of certain taxes and fees can lead to a funds deficit.</li>
+        <li>In some cases it is not possible to start certain trades at the designated price or a conditional stop/limit or stop/loss procedure, due to unpredictable market circumstances. In those cases the client might be asked to make a quick deposit. Should the client fail to make the deposit, he will be responsible for any negative funds on his account along with the cancellation of the trade.</li>
+        <li>The trading of currencies does not happen on an actual exchange market. There are sequences which are not traded very often. In some cases there might be errors in the citation of prices because there is no other party. Such a trade might not be possible at the particular moment in time.</li>
+        <li>BorsaPro does not provide any guidance or aiding information and might have interests different than those of the client. In some cases BorsaPro might serve as an opposing party of a trade or act in a disadvantageous for the user manner. In other words, in a trade where the client is selling an asset, BorsaPro might be the buyer. The opposite situation is also possible. It is also possible that BorsaPro sets the pricing for those trades, which might not reflect the best possible prices for the client and might differ from the prices offered to other clients.</li>
+        <li>Sudden closing of the client`s trades might occur in case of bankruptcy in BorsaPro, an associate bank or any other party related to the trading process.</li>
+      </ol>
+      <p>By using BorsaPro and its services, the client agrees that he`s read and comprehended the risk announcement.</p>
     </div>
   </section>
   <section class="payment">
@@ -194,11 +109,11 @@
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="../about-us/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../about-us/risk-disclosure.html">Risk Disclosure</a></li>
-          <li><a href="../about-us/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../about-us/anti-money-laundering.html">Anti-Money Laundering</a></li>
-          <li><a href="../about-us/kyc.html">KYC Policy</a></li>
+          <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a class="footer__active">Risk Disclosure</a></li>
+          <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="anti-money-laundering.html">Anti-Money Laundering</a></li>
+          <li><a href="kyc.html">KYC Policy</a></li>
         </ul>
         <ul>
           <b>Support</b>
