--- a/borsa/support/our-team.html
+++ b/borsa/support/our-team.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Account Types - BorsaPro</title>
+  <title>Our Team - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -21,9 +21,9 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Accounts</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="trade-with-borsapro.html">Trade with BorsaPro</a></li>
-                      <li class="main-nav__item"><a>Account types</a></li>
-                      <li class="main-nav__item"><a href="segregated-account.html">Segregated account</a></li>
+                      <li class="main-nav__item"><a href="../accounts/trade-with-borsapro.html">Trade with BorsaPro</a></li>
+                      <li class="main-nav__item"><a href="../accounts/account-types.html">Account types</a></li>
+                      <li class="main-nav__item"><a href="../accounts/segregated-account.html">Segregated account</a></li>
                       <li class="main-nav__item"><a href="#">Open live account</a></li>
                   </ul>
                 </li>
@@ -40,7 +40,7 @@
                   <ul class="main-nav__list">
                       <li class="main-nav__item"><a href="templates/spread.html">Spreads and Trading Hours</a></li>
                       <li class="main-nav__item"><a href="../tools/trade-glossary.html">Trade glossary</a></li>
-                      <li class="main-nav__item"><a href="../tools/forex-signals.html">Forex Signals</a></li>
+                      <li class="main-nav__item"><a href="../tools/forex-signals.com">Forex Signals</a></li>
                       <li class="main-nav__item"><a href="../tools/account-faq.html">Account FAQ</a></li>
                       <li class="main-nav__item"><a href="../tools/account-funding.html">Account Funding & Withdrawal</a></li>
                   </ul>
@@ -60,110 +60,15 @@
       </div>
     </div>
   </header>
-  <section class="title  title--accounts">
+  <section class="title  title--platforms">
     <div class="container">
-      <h1>Account Types</h1>
+      <h1>Our Team</h1>
     </div>
   </section>
-  <section class="table">
+  <section class="assets">
     <div class="container">
-      <table>
-        <tr>
-          <th></th>
-          <th>
-            <b>Mini</b>
-            <p>Basic Exchange For<br>Beginners</p>
-            <b>$500</b>
-            <a class="button" href="">Open account</a>
-          </th>
-          <th>
-            <b>Classic</b>
-            <p>For Skilled<br>Investors</p>
-            <b>$5 000</b>
-            <a class="button" href="">Open account</a>
-          </th>
-          <th>
-            <b>Premium</b>
-            <p>Advanced Transaction<br>For Experienced Investors</p>
-            <b>$20 000</b>
-            <a class="button" href="">Open account</a>
-          </th>
-        </tr>
-        <tr>
-          <td>Online Chat Support</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Platforms: MT4 & Mobile</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Instruments: Forex, CFDs & Commodities</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Free E-book</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Individual Competitive Spreads & Commissions</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Access to Breaking News & Market Research</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Online Phone Support</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Real-Time Trading Signals</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Trading Education Program</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Account Executive Team Available 24/7</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Trade Mentor</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-        </tr>
-      </table>
-      <h1>BorsaPro gives you:</h1>
-        <p>Creating a trading profile at BorsaPro is very easy and perfectly safe.</p>
-      <b>1. Select an account type.</b>
-        <p>There are 3 accounts which you can choose from, and every single one features different pluses for the investor. You are free to choose whichever one suits your needs best. Remember that it`s possible to switch your account type after you make the first deposit.</p>
-      <b>2. Complete the required information and provide identity verification.</b>
-        <p>Just fill in the required information and provide something which proves your identity.</p>
-      <b>3. Put money on your account.</b>
-        <p>After we confirm your application, you will be able to put money on your account and begin investing immediately.</p>
+      <p>The amazing BorsaPro staff has been put together in order to bring our clients the best, and most satisfying trading experience along with the optimal conditions for trading. One of the things we`re most proud of is the experience and know-how we possess. Each employee at BorsaPro is experienced in the field of Forex and gives their maximum in order to give you the best possible platform. IT experts, professional investors and economists, we have all the leading experts in one place.</p>
+      <p>Constantly innovating and improving our services, while moving beyond the industry`s limitations and discovering new possibilities, our team work tirelessly in order to make all of this possible.</p>  
     </div>
   </section>
   <section class="payment">
@@ -203,7 +108,7 @@
         <ul>
           <b>Support</b>
           <li><a href="../index.html#contact-us">Contact Us</a></li>
-          <li><a href="../support/our-team.html">Our Team</a></li>
+          <li><a class="footer__active">Our Team</a></li>
         </ul>
         <ul>
           <b>Algo Trading</b>
