--- a/borsa/tools/account-funding.html
+++ b/borsa/tools/account-funding.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <header class="header  header--inner">
+  <header class="header">
     <div class="container">
       <div class="header__flex">
         <a href="../index.html">
@@ -121,24 +121,24 @@
       <div class="footer__flex">
         <ul>
           <b>Assets</b>
-          <li><a href="templates/forex.html">Forex</a></li>
-          <li><a href="templates/futures.html">Futures</a></li>
-          <li><a href="templates/commodities.html">Commodities</a></li>
-          <li><a href="templates/indices.html">Indices</a></li>
-          <li><a href="templates/stocks.html">Stocks</a></li>
+          <li><a href="../assets/forex.html">Forex</a></li>
+          <li><a href="../assets/futures.html">Futures</a></li>
+          <li><a href="../assets/commodities.html">Commodities</a></li>
+          <li><a href="../assets/indices.html">Indices</a></li>
+          <li><a href="../assets/stocks.html">Stocks</a></li>
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="templates/terms.html">Terms and Conditions</a></li>
-          <li><a href="templates/risk.html">Risk Disclosure</a></li>
-          <li><a href="templates/privacy.html">Privacy Policy</a></li>
-          <li><a href="templates/anti-money.html">Anti-Money Laundering</a></li>
-          <li><a href="templates/kyc.html">KYC Policy</a></li>
+          <li><a href="../about-us/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="../about-us/risk-disclosure.html">Risk Disclosure</a></li>
+          <li><a href="../about-us/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../about-us/anti-money-laundering.html">Anti-Money Laundering</a></li>
+          <li><a href="../about-us/kyc.html">KYC Policy</a></li>
         </ul>
         <ul>
           <b>Support</b>
-          <li><a href="">Support</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li><a href="../index.html#contact-us">Contact Us</a></li>
+          <li><a href="../support/our-team.html">Our Team</a></li>
         </ul>
         <ul>
           <b>Algo Trading</b>
