--- a/borsa/about-us/anti-money-laundering.html
+++ b/borsa/about-us/anti-money-laundering.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Account Types - BorsaPro</title>
+  <title>Anti-Money Laundering - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -21,9 +21,9 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Accounts</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="trade-with-borsapro.html">Trade with BorsaPro</a></li>
-                      <li class="main-nav__item"><a>Account types</a></li>
-                      <li class="main-nav__item"><a href="segregated-account.html">Segregated account</a></li>
+                      <li class="main-nav__item"><a href="../accounts/trade-with-borsapro.html">Trade with BorsaPro</a></li>
+                      <li class="main-nav__item"><a href="../accounts/account-types.html">Account types</a></li>
+                      <li class="main-nav__item"><a href="../accounts/segregated-account.html">Segregated account</a></li>
                       <li class="main-nav__item"><a href="#">Open live account</a></li>
                   </ul>
                 </li>
@@ -60,110 +60,26 @@
       </div>
     </div>
   </header>
-  <section class="title  title--accounts">
+  <section class="title  title--platforms">
     <div class="container">
-      <h1>Account Types</h1>
+      <h1>Anti-Money Laundering</h1>
     </div>
   </section>
-  <section class="table">
+  <section class="assets">
     <div class="container">
-      <table>
-        <tr>
-          <th></th>
-          <th>
-            <b>Mini</b>
-            <p>Basic Exchange For<br>Beginners</p>
-            <b>$500</b>
-            <a class="button" href="">Open account</a>
-          </th>
-          <th>
-            <b>Classic</b>
-            <p>For Skilled<br>Investors</p>
-            <b>$5 000</b>
-            <a class="button" href="">Open account</a>
-          </th>
-          <th>
-            <b>Premium</b>
-            <p>Advanced Transaction<br>For Experienced Investors</p>
-            <b>$20 000</b>
-            <a class="button" href="">Open account</a>
-          </th>
-        </tr>
-        <tr>
-          <td>Online Chat Support</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Platforms: MT4 & Mobile</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Instruments: Forex, CFDs & Commodities</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Free E-book</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Individual Competitive Spreads & Commissions</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Access to Breaking News & Market Research</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Online Phone Support</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Real-Time Trading Signals</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Trading Education Program</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Account Executive Team Available 24/7</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Trade Mentor</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-        </tr>
-      </table>
-      <h1>BorsaPro gives you:</h1>
-        <p>Creating a trading profile at BorsaPro is very easy and perfectly safe.</p>
-      <b>1. Select an account type.</b>
-        <p>There are 3 accounts which you can choose from, and every single one features different pluses for the investor. You are free to choose whichever one suits your needs best. Remember that it`s possible to switch your account type after you make the first deposit.</p>
-      <b>2. Complete the required information and provide identity verification.</b>
-        <p>Just fill in the required information and provide something which proves your identity.</p>
-      <b>3. Put money on your account.</b>
-        <p>After we confirm your application, you will be able to put money on your account and begin investing immediately.</p>
+      <p>BorsaPro puts a strong emphasis on counter-money laundering and takes it very seriously. The platform strongly abides by the AML terms, and as a prominent and global forex platform, it stands as firm opposition against money laundering. The following protocol has been made with the purpose of keeping any money laundering activities from happening and providing timely information on the matter. BorsaPro encourages its users to read the protocol against money laundering and let us know in case there are any unclear points.</p>
+      <b>The meaning of money laundering?</b>
+        <p>The concealment of any illegal money by moving them to a legally valid place or financial institution, unnoticed and hidden from the eye of the law.</p>
+        <p>It is possible that funds moved to lawful financial institutions by members of terrorist organizations can be used to buy goods or services to be utilized in unlawful actions or to aid other similar activities.</p>
+        <p>BorsaPro abides by all legal restrictions and is going to notify about all effort of any company, entity or person to hide the possession or source of any funds obtained by unlawful actions. The following are also contained: fraudulent actions, unlawful gambling, stealing, anything drug related and others.</p>
+      <b>For what reasons do we need to verify your identity when trading?</b>
+        <p>Every BorsaPro client is obliged to provide verification of his identity along with proven source of income. The client has to give some form of ID in order to verify his name, place of residence and other relevant info.</p>
+      <b>Which documents are necessary for verifying the identity?</b>
+        <ol>
+          <li>Legal ID document.</li>
+          <li>Duplicate of a utility payment. It must have the client`s name and address.</li>
+          <li>The user has to distinctly show the name of the recipient when filling in the BorsaPro contract. The name on the contract should be the same as the one of the account recipient and the one on the identification papers. Also, any withdrawals should go to the same recipient.</li>
+        </ol>
     </div>
   </section>
   <section class="payment">
@@ -194,11 +110,11 @@
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="../about-us/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../about-us/risk-disclosure.html">Risk Disclosure</a></li>
-          <li><a href="../about-us/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../about-us/anti-money-laundering.html">Anti-Money Laundering</a></li>
-          <li><a href="../about-us/kyc.html">KYC Policy</a></li>
+          <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="risk-disclosure.html">Risk Disclosure</a></li>
+          <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a class="footer__active">Anti-Money Laundering</a></li>
+          <li><a href="kyc.html">KYC Policy</a></li>
         </ul>
         <ul>
           <b>Support</b>
