--- a/borsa/about-us/kyc.html
+++ b/borsa/about-us/kyc.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Account Types - BorsaPro</title>
+  <title>KYC - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -21,9 +21,9 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Accounts</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="trade-with-borsapro.html">Trade with BorsaPro</a></li>
-                      <li class="main-nav__item"><a>Account types</a></li>
-                      <li class="main-nav__item"><a href="segregated-account.html">Segregated account</a></li>
+                      <li class="main-nav__item"><a href="../accounts/trade-with-borsapro.html">Trade with BorsaPro</a></li>
+                      <li class="main-nav__item"><a href="../accounts/account-types.html">Account types</a></li>
+                      <li class="main-nav__item"><a href="../accounts/segregated-account.html">Segregated account</a></li>
                       <li class="main-nav__item"><a href="#">Open live account</a></li>
                   </ul>
                 </li>
@@ -60,110 +60,35 @@
       </div>
     </div>
   </header>
-  <section class="title  title--accounts">
+  <section class="title  title--platforms">
     <div class="container">
-      <h1>Account Types</h1>
+      <h1>KYC</h1>
     </div>
   </section>
-  <section class="table">
+  <section class="assets">
     <div class="container">
-      <table>
-        <tr>
-          <th></th>
-          <th>
-            <b>Mini</b>
-            <p>Basic Exchange For<br>Beginners</p>
-            <b>$500</b>
-            <a class="button" href="">Open account</a>
-          </th>
-          <th>
-            <b>Classic</b>
-            <p>For Skilled<br>Investors</p>
-            <b>$5 000</b>
-            <a class="button" href="">Open account</a>
-          </th>
-          <th>
-            <b>Premium</b>
-            <p>Advanced Transaction<br>For Experienced Investors</p>
-            <b>$20 000</b>
-            <a class="button" href="">Open account</a>
-          </th>
-        </tr>
-        <tr>
-          <td>Online Chat Support</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Platforms: MT4 & Mobile</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Instruments: Forex, CFDs & Commodities</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Free E-book</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Individual Competitive Spreads & Commissions</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Access to Breaking News & Market Research</td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Online Phone Support</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Real-Time Trading Signals</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Trading Education Program</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Account Executive Team Available 24/7</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-        </tr>
-        <tr>
-          <td>Trade Mentor</td>
-          <td class="table__check-r"></td>
-          <td class="table__check-r"></td>
-          <td class="table__check-g"></td>
-        </tr>
-      </table>
-      <h1>BorsaPro gives you:</h1>
-        <p>Creating a trading profile at BorsaPro is very easy and perfectly safe.</p>
-      <b>1. Select an account type.</b>
-        <p>There are 3 accounts which you can choose from, and every single one features different pluses for the investor. You are free to choose whichever one suits your needs best. Remember that it`s possible to switch your account type after you make the first deposit.</p>
-      <b>2. Complete the required information and provide identity verification.</b>
-        <p>Just fill in the required information and provide something which proves your identity.</p>
-      <b>3. Put money on your account.</b>
-        <p>After we confirm your application, you will be able to put money on your account and begin investing immediately.</p>
+      <p>Know your customer policies have become increasingly important worldwide lately, especially among banks and other financial institutions, in order to prevent identity theft, money laundering, financial fraud and terrorist activity.</p>
+      <p>BorsaPro holds a zero tolerance fraud policy, and is taking all measures possible to prevent it. Any fraudulent activity will be documented and all related accounts to it will be immediately closed. All funds in these accounts will be forfeited.</p>
+      <b>Prevention:</b>
+        <p>BorsaPro aims to ensure the integrity of any sensitive data it obtains, such as your account information and the transactions you make, using a variety of security measures and fraud controls. Securing your electronic transactions requires us to be provided with certain data from you, including your preferred deposit method.</p>
+        <p>When you deposit funds we will require the following documents</p>
+        <ul>
+          <li>A copy of your valid passport with the signature page</li>
+          <li>Copies of your credit cards, used to make the deposit (Front side with only the 4 last digits visible, back side with the CVV covered)</li>
+          <li>A copy of a recent utility bill in your name and address</li>
+          <li>A signed purchase history of your online transactions</li>
+        </ul>
+      <p>If you have any questions please don’t hesitate to contact our customer support:</p>
+      <a href="mailto:support@borsapro.com">support@borsapro.com</a>
+      <b>When do I need to provide these documents?</b>
+        <p>We highly appreciate you taking the time to provide us with all the necessary documents as soon as you can, in order to avoid any delays in processing your transactions. We require the receipt of all the necessary documents prior to making any cash transactions to your benefit.</p>
+        <p>Some circumstances may require us to request these documents before allowing any other activities in your account, such as deposits or trades.</p>
+        <p>Please note that if we will not receive the required documents on file, your pending withdrawals will be cancelled and credited back to your trading account. We will notify you on such event via our system.</p>
+      <b>How can I send you these documents?</b>
+        <p>Please scan your documents, or take a high quality digital camera picture, save the images as jpegs, then send it to us via mail to support@BorsaPro.com</p>
+        <p>How do I know my documents are safe with you?</p>
+        <p>BorsaPro holds the security of documentation at highest priority, and treats all documents it receives with utmost respect and confidentiality. All files we obtain are fully protected using the highest level possible of encryption at every step of the review process.</p>
+        <p>We thank you for your cooperation in helping us make BorsaPro a safer place to trade.</p>
     </div>
   </section>
   <section class="payment">
@@ -194,11 +119,11 @@
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="../about-us/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../about-us/risk-disclosure.html">Risk Disclosure</a></li>
-          <li><a href="../about-us/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../about-us/anti-money-laundering.html">Anti-Money Laundering</a></li>
-          <li><a href="../about-us/kyc.html">KYC Policy</a></li>
+          <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="risk-disclosure.html">Risk Disclosure</a></li>
+          <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="anti-money-laundering.html">Anti-Money Laundering</a></li>
+          <li><a class="footer__active">KYC Policy</a></li>
         </ul>
         <ul>
           <b>Support</b>
