--- a/borsa/assets/stocks.html
+++ b/borsa/assets/stocks.html
@@ -100,16 +100,16 @@
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="templates/terms.html">Terms and Conditions</a></li>
-          <li><a href="templates/risk.html">Risk Disclosure</a></li>
-          <li><a href="templates/privacy.html">Privacy Policy</a></li>
-          <li><a href="templates/anti-money.html">Anti-Money Laundering</a></li>
-          <li><a href="templates/kyc.html">KYC Policy</a></li>
+          <li><a href="../about-us/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="../about-us/risk-disclosure.html">Risk Disclosure</a></li>
+          <li><a href="../about-us/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../about-us/anti-money-laundering.html">Anti-Money Laundering</a></li>
+          <li><a href="../about-us/kyc.html">KYC Policy</a></li>
         </ul>
         <ul>
           <b>Support</b>
-          <li><a href="">Support</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li><a href="../index.html#contact-us">Contact Us</a></li>
+          <li><a href="../support/our-team.html">Our Team</a></li>
         </ul>
         <ul>
           <b>Algo Trading</b>
