--- a/borsa/accounts/trade-with-borsapro.html
+++ b/borsa/accounts/trade-with-borsapro.html
@@ -24,7 +24,7 @@
                       <li class="main-nav__item"><a>Trade with BorsaPro</a></li>
                       <li class="main-nav__item"><a href="account-types.html">Account types</a></li>
                       <li class="main-nav__item"><a href="templates/segregated.html">Segregated account</a></li>
-                      <li class="main-nav__item"><a href="#">Open live account</a></li>
+                      <li class="main-nav__item"><a class="button--open">Open live account</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -47,8 +47,8 @@
                 </li>
             </ul>
             <ul class="main-nav__user">
-              <li class="main-nav__item"><a class="button  button--header  button--green" href="#">Open account</a></li>
-              <li class="main-nav__item"><a class="button  button--header  button--gray" href="#">Log In</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--green  button--open" href="#">Open account</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--gray  button--signin" href="#">Log In</a></li>
             </ul>
           </div>
           
