--- a/borsa/algo-trading/algo-trading.html
+++ b/borsa/algo-trading/algo-trading.html
@@ -21,9 +21,9 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Accounts</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a>Trade with BorsaPro</a></li>
-                      <li class="main-nav__item"><a href="account-types.html">Account types</a></li>
-                      <li class="main-nav__item"><a href="templates/segregated.html">Segregated account</a></li>
+                      <li class="main-nav__item"><a href="../accounts/trade-with-borsapro.html">Trade with BorsaPro</a></li>
+                      <li class="main-nav__item"><a href="../accounts/account-types.html">Account types</a></li>
+                      <li class="main-nav__item"><a href="../accounts/segregated-account.html">Segregated account</a></li>
                       <li class="main-nav__item"><a class="button--open">Open live account</a></li>
                   </ul>
                 </li>
@@ -38,7 +38,7 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Tools</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="templates/spread.html">Spreads and Trading Hours</a></li>
+                      <li class="main-nav__item"><a href="../tools/spread-and-trading-hours.html">Spreads and Trading Hours</a></li>
                       <li class="main-nav__item"><a href="../tools/trade-glossary.html">Trade glossary</a></li>
                       <li class="main-nav__item"><a href="../tools/forex-signals.html">Forex Signals</a></li>
                       <li class="main-nav__item"><a href="../tools/account-faq.html">Account FAQ</a></li>
@@ -122,7 +122,7 @@
         </ul>
         <ul>
           <b>Algo Trading</b>
-          <li><a href="templates/faq.html">Algo Trading</a></li>
+          <li><a href="../algo-trading/algo-trading.html">Algo Trading</a></li>
         </ul>
       </div>
       <hr>
