--- a/borsa/tools/trade-glossary.html
+++ b/borsa/tools/trade-glossary.html
@@ -38,7 +38,7 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Tools</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="templates/spread.html">Spreads and Trading Hours</a></li>
+                      <li class="main-nav__item"><a href="spread-and-trading-hours.html">Spreads and Trading Hours</a></li>
                       <li class="main-nav__item"><a>Trade glossary</a></li>
                       <li class="main-nav__item"><a href="forex-signals.html">Forex Signals</a></li>
                       <li class="main-nav__item"><a href="account-faq.html">Account FAQ</a></li>
@@ -380,7 +380,7 @@
         </ul>
         <ul>
           <b>Algo Trading</b>
-          <li><a href="templates/faq.html">Algo Trading</a></li>
+          <li><a href="../algo-trading/algo-trading.html">Algo Trading</a></li>
         </ul>
       </div>
       <hr>
