--- a/borsa/index.html
+++ b/borsa/index.html
@@ -205,7 +205,7 @@
           <p>Trading has never been made easy on a platform as BorsaPro offers. The dynamicity of this broker is what makes it the choice of many investors. It has all the characteristics of a good broker Featuring research from several providers, plus stellar execution. Have a wonderful trading experience with BorsaPro, and live the life of a King.</p>
           <img src="img/comment-6.jpg" alt="">
           <b>Stephen Patochi</b><br>
-          <small>Investment trader</small>
+          <small>Pensioner</small>
         </div>
       </div>
     </div>
