--- a/mb/index.html
+++ b/mb/index.html
@@ -105,9 +105,23 @@
           <b>И на этом можно заработать!</b>
           <p>Выбирайте любой актив из сотен доступных и<br>зарабатывайте на его ценовом колебании!</p>
           <div class="price__select">
-            <div class="price__flex  price__flex--select">
+            <div class="price__flex">
               <p class="price__name">Bitcoin</p>
-              <p class="price__value">8943.2377024$</p>
+              <p class="price__value  price__value--bitcoin">8943.2377024$</p>
+            </div>
+            <div class="price__flex  price__flex--sub">
+              <div>
+                <p class="price__name">Bitcoin</p>
+                <p class="price__value  price__value--bitcoin">8943.2377024$</p>
+              </div>
+              <div>
+                <p class="price__name">GPB/USD</p>
+                <p class="price__value  price__value--gpb">8943.2377024$</p>
+              </div>
+              <div>
+                <p class="price__name">Tesla</p>
+                <p class="price__value  price__value--tesla">8943.2377024$</p>
+              </div>
             </div>
           </div>
         </div>
