--- a/mb/index.html
+++ b/mb/index.html
@@ -106,20 +106,20 @@
           <p>Выбирайте любой актив из сотен доступных и<br>зарабатывайте на его ценовом колебании!</p>
           <div class="price__select">
             <div class="price__flex">
-              <p class="price__name">Bitcoin</p>
+              <p class="price__name  price__name--bitcoin">Bitcoin</p>
               <p class="price__value  price__value--bitcoin">8943.2377024$</p>
             </div>
             <div class="price__flex  price__flex--sub">
               <div>
-                <p class="price__name">Bitcoin</p>
+                <p class="price__name  price__name--bitcoin">Bitcoin</p>
                 <p class="price__value  price__value--bitcoin">8943.2377024$</p>
               </div>
               <div>
-                <p class="price__name">GPB/USD</p>
+                <p class="price__name  price__name--gpb">GPB/USD</p>
                 <p class="price__value  price__value--gpb">8943.2377024$</p>
               </div>
               <div>
-                <p class="price__name">Tesla</p>
+                <p class="price__name  price__name--tesla">Tesla</p>
                 <p class="price__value  price__value--tesla">8943.2377024$</p>
               </div>
             </div>
@@ -174,7 +174,37 @@
       </div>
     </div>
   </section>
-  
+  <section class="comment">
+    <div class="container">
+      <h1>Отзывы наших клиентов</h1>
+      <div class="comment__slider">
+        <div class="comment__box">
+          <img src="img/comment-1.png" alt="">
+          <b>Иванов Иван</b><br>
+          <small>Москва</small>
+          <p>Работаю с этой компанией в период с августа 2015 по данный момент. Довольно приличная компания, качественная аналитика, если говорить конкретно о работе, то по началу не верил что можно заработать, но решил рискнуть с 1300 долларов. Процесс торговли был длительный, мой брокер( за него скажу поже) говорил что за неделю заработаем, но вышло поже, понадобилось 16 дней что бы заработать 77% от вложения.Меня это не смутило так как понимал что это финансовая сфера и есть риски, мой брокер предупредил сразу что в случае если будут риски мы торгуем дольше, поэтому я не росстроился, так как было главное для меня прибыль а не потери. Вообщем на данный момент я имею в обороте более 50000 долларов, и я доволен компанией. Кстати с выводом средств проблем нет, знаю что это основная проблема у всех, тут с этим все серьезно, так как компания контролируеться финансовой палатой (проверял это)</p>
+        </div>
+        <div class="comment__box">
+          <img src="img/comment-1.png" alt="">
+          <b>Иванов Иван</b><br>
+          <small>Москва</small>
+          <p>Работаю с этой компанией в период с августа 2015 по данный момент. Довольно приличная компания, качественная аналитика, если говорить конкретно о работе, то по началу не верил что можно заработать, но решил рискнуть с 1300 долларов. Процесс торговли был длительный, мой брокер( за него скажу поже) говорил что за неделю заработаем, но вышло поже, понадобилось 16 дней что бы заработать 77% от вложения.Меня это не смутило так как понимал что это финансовая сфера и есть риски, мой брокер предупредил сразу что в случае если будут риски мы торгуем дольше, поэтому я не росстроился, так как было главное для меня прибыль а не потери. Вообщем на данный момент я имею в обороте более 50000 долларов, и я доволен компанией. Кстати с выводом средств проблем нет, знаю что это основная проблема у всех, тут с этим все серьезно, так как компания контролируеться финансовой палатой (проверял это)</p>
+        </div>
+        <div class="comment__box">
+          <img src="img/comment-1.png" alt="">
+          <b>Иванов Иван</b><br>
+          <small>Москва</small>
+          <p>Работаю с этой компанией в период с августа 2015 по данный момент. Довольно приличная компания, качественная аналитика, если говорить конкретно о работе, то по началу не верил что можно заработать, но решил рискнуть с 1300 долларов. Процесс торговли был длительный, мой брокер( за него скажу поже) говорил что за неделю заработаем, но вышло поже, понадобилось 16 дней что бы заработать 77% от вложения.Меня это не смутило так как понимал что это финансовая сфера и есть риски, мой брокер предупредил сразу что в случае если будут риски мы торгуем дольше, поэтому я не росстроился, так как было главное для меня прибыль а не потери. Вообщем на данный момент я имею в обороте более 50000 долларов, и я доволен компанией. Кстати с выводом средств проблем нет, знаю что это основная проблема у всех, тут с этим все серьезно, так как компания контролируеться финансовой палатой (проверял это)</p>
+        </div>
+        <div class="comment__box">
+          <img src="img/comment-1.png" alt="">
+          <b>Иванов Иван</b><br>
+          <small>Москва</small>
+          <p>Работаю с этой компанией в период с августа 2015 по данный момент. Довольно приличная компания, качественная аналитика, если говорить конкретно о работе, то по началу не верил что можно заработать, но решил рискнуть с 1300 долларов. Процесс торговли был длительный, мой брокер( за него скажу поже) говорил что за неделю заработаем, но вышло поже, понадобилось 16 дней что бы заработать 77% от вложения.Меня это не смутило так как понимал что это финансовая сфера и есть риски, мой брокер предупредил сразу что в случае если будут риски мы торгуем дольше, поэтому я не росстроился, так как было главное для меня прибыль а не потери. Вообщем на данный момент я имею в обороте более 50000 долларов, и я доволен компанией. Кстати с выводом средств проблем нет, знаю что это основная проблема у всех, тут с этим все серьезно, так как компания контролируеться финансовой палатой (проверял это)</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="easy">
     <div class="container">
       <img src="img/easy-target.svg" width="110">
