--- a/forex24/webtrader.html
+++ b/forex24/webtrader.html
@@ -10,14 +10,14 @@
 <body>
   <section class="webtrader">
     <div class="container">
-      <h1>WebTrader</h1>
+      <h1>WebTrader Platform</h1>
       <div class="webtrader__img">
         <div class="webtrader__flex">
           <div class="webtrader__box  webtrader__box--right">
             <h2>1</h2>
             <p>You can filter instruments using keyword or securities group or set your own asset classes.</p>
           </div>
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--left">
             <h2>4</h2>
             <p>Excellent  HTML5 charting which includes five chart types, vector drawings, and 100+ studies.</p>
           </div>
@@ -27,7 +27,7 @@
             <h2>2</h2>
             <p>By just optimizing the smart one-click trading mode, traders can set size, TP/SL, and also open orders with exceptional speed.</p>
           </div>
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--left">
             <h2>5</h2>
             <p>Keep your eyes on the market trend and your open positions at the same time! Open and close trades directly from the chart.</p>
           </div>
@@ -37,15 +37,25 @@
             <h2>3</h2>
             <p>You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”</p>
           </div>
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--left">
             <h2>6</h2>
             <p>ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.</p>
+          </div>
+        </div>
+        <div class="webtrader__flex  webtrader__flex--up">
+          <div class="webtrader__box  webtrader__box--up">
+            <h2>7</h2>
+            <p>With advanced ‘Close All’ control, traders can close any transaction:  profitable, losing, buy, sell and open positions with just one click.</p>
+          </div>
+          <div class="webtrader__box  webtrader__box--up">
+            <h2>8</h2>
+            <p>The summary tab shows traders aggregated positions grouped by symbol, allowing users to clearly see total P/L recorded for a particular instrument.</p>
           </div>
         </div>
       </div>
       <hr>
       <h3>Advantages</h3>
-      <p class="webtrader__subtext"> Quando sei in movimento, ora puoi utilizzare il Forex Global Trader per Cell. di Forex24 per accedere a tutti i tuoi account MT4, utilizzando le tue crExperience lightning-fast trade execution. Award-winning HTML5 canvas-based charting with 50+ technical indicators. Easily view aggregated positions, pending orders, trade history and more.</p>
+      <p class="webtrader__subtext">Forex24 Global is providing a new web based trading platform that runs on both PC and Mac. This platform, which can be accessed using clients’ existing mt4 logins, broadens our reach and addresses some ongoing needs of our clients who require a stable and flexible trading solution to access global forex markets.<br><br>Our webtrader has been built with one purpose in mind and that's to improve the trading experience of our clients. Combine MT4 and our Webtrader under one trading account so you can keep all the powerful features that our MT4 infrastructure offers, but increase your platform's capabilities when you're not at your own trading desk or on the go. Our Webtrader uses all the advantage of the brand new infrastructure for MT4 and gives you flexibility and choice.</p>
       <div class="webtrader__flex">
         <div class="webtrader__mockup"></div>
         <div class="webtrader__text">
