--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -42,5 +42,12 @@
       </form>
     </div>
   </section>
+  <section class="welcome">
+    <div class="container">
+      <div class="welcome__flex">
+        
+      </div>
+    </div>
+  </section>
 </body>
 </html>
